--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "idealreactseed",
   "version": "1.0.0",
-  "description": "The ideal react seed",
+  "description": "The ideal react seed bt TGO",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
